--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,9 @@
         <div class="header">
             <h1>🐜 Donaciones Invencibles</h1>
             <div class="header-subtitle" id="headerLastUpdate">
+                Última actualización: Cargando...
             </div>
+            <div class="version-tag">v0.1</div>
         </div>
 
         <!-- Botones de acción -->
@@ -1185,7 +1187,7 @@
         <!-- Footer info -->
         <!-- Footer info -->
         <div class="footer-info">
-            <p>📱 v0.1 | Última actualización: <span id="lastUpdateTime">-</span></p>
+            <p>📱 Última actualización: <span id="lastUpdateTime">-</span></p>
             <p>🗓️ Semana iniciada: <span id="weekStartTime">-</span></p>
             <p id="admin-login-container" style="margin-top: 10px;"></p>
             <div id="backupButtons" style="display: none; margin-top: 10px;">
